--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,17 @@
-:root {
+:root { /* color theme 1 */
   --color-1: #003049;
   --color-2: #D62828;
   --color-3: #F77F00;
   --color-4: #FCBF49;
   --color-5: #EAE2B7;
+}
+
+:root { /* color theme 2 */
+  --color-1: #000000;
+  --color-2: #14213D;
+  --color-3: #FCA311;
+  --color-4: #E5E5E5;
+  --color-5: #FFFFFF;
 }
 
 * {
@@ -15,9 +23,9 @@ body {
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 5fr;
   grid-template-areas: 
-    "sidebar header"
-    "sidebar main";
-  font-family: "monospace" "sans-serif", "serif"; 
+  "sidebar header"
+  "sidebar main";
+  font-family: "Helvetica", "monospace", "sans-serif", "serif"; 
   font-size: 16px;
 }
 
@@ -26,40 +34,129 @@ body {
   grid-area: sidebar;
   padding: 24px;
   color: var(--color-5);
-}
 
-.sidebar .logo  {
-  display: flex;
-  margin-bottom: 60px;
-}
+  & .logo  {
+    display: flex;
+    margin-bottom: 60px;
+  }
 
-.sidebar .nav-section-1, .sidebar .nav-section-2 {
-  display: grid;
-  gap: 20px;
-  margin-bottom: 60px;
-}
+  & .nav-section-1, .nav-section-2 {
+    display: grid;
+    gap: 20px;
+    margin-bottom: 60px;
+  }
 
-.sidebar .nav-item  {
-  display: flex;
-}
+  & .nav-item  {
+    display: flex;
+  }
 
-.sidebar svg {
-  display: block;
-  margin-right: 16px;
-  color: var(--color-5);
-}
+  & svg {
+    display: block;
+    margin-right: 16px;
+    color: var(--color-5);
+  }
 
-.sidebar a {
-  text-decoration: none;
-  color: inherit;
+  & a {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
 .header {
   background-color: var(--color-5);
   grid-area: header;
+  padding: 16px 64px;
+  box-shadow: 0 5px 5px -5px var(--color-1);
+  position: relative;
+  z-index: 1;
+
+  & .top {
+    display: flex;
+    /*grid-template-columns: 2fr 1fr;*/
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 16px;
+
+    & .search {
+      /* border: 1px solid red; */
+      display: flex;
+      gap: 16px;
+      align-items: center;
+      flex: 1;
+
+      & input {
+        width: 70%;
+        margin-right: 10px;
+        min-width: 0;
+        line-height: 2rem;
+        background-color: var(--color-4);
+        border-radius: 9999px;
+        border: none;
+        padding: 0 10px;
+      }
+    }
+
+    & .profile {
+      display: flex;
+      gap: 24px;
+      align-items: center;
+      color: var(--color-1);
+      /* border: 1px solid red; */
+    }
+
+    & svg {
+      color: var(--color-1);
+    }
+  }
+
+  & .bottom {
+    display: flex;
+    justify-content: space-between;
+
+    & .hello {
+      /* border: 1px solid red; */
+      display: flex;
+      gap: 16px;
+      align-items: center;
+      color: var(--color-1);
+
+      .avatar {
+        height: 70px;
+        width: 70px;
+      }
+
+      & .buttons {
+        border: 1px solid red;
+        list-style-type: none;
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        align-items: center;
+        gap: 32px;
+
+        button {
+          border: none;
+          background-color: var(--color-2);
+          border-radius: 9999px;
+          /* font-size: 1.2rem; */
+          font-weight: bold;
+          width: 100%;
+          padding: 8px 16px;
+          color: var(--color-5);
+        }
+      }
+    }
+  }
 }
 
 .main {
   background-color: var(--color-4);
   grid-area: main;
+  padding: 24px 24px 0 16px;
+}
+
+.avatar {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
 }
