--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,18 @@
 
 :root { /* color theme 2 */
   --color-1: #000000;
-  --color-2: #14213D;
+  --color-2: #9D4EDD;
+  /* --color-2: #14213D; */
   --color-3: #FCA311;
   --color-4: #E5E5E5;
   --color-5: #FFFFFF;
+  --color-6: #808080;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
 * {
@@ -27,6 +35,7 @@ body {
   "sidebar main";
   font-family: "Helvetica", "monospace", "sans-serif", "serif"; 
   font-size: 16px;
+  line-height: 1.3;
 }
 
 .sidebar {
@@ -66,7 +75,7 @@ body {
   background-color: var(--color-5);
   grid-area: header;
   padding: 16px 64px;
-  box-shadow: 0 5px 5px -5px var(--color-1);
+  box-shadow: 0px 5px 5px 0px #ccc;
   position: relative;
   z-index: 1;
 
@@ -74,27 +83,30 @@ body {
     display: flex;
     /*grid-template-columns: 2fr 1fr;*/
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
     margin-bottom: 16px;
+    /* & .search { */
+    /*   /* border: 1px solid red; */
+    /*   display: flex; */
+    gap: 16px;
+    /*   align-items: center; */
 
-    & .search {
-      /* border: 1px solid red; */
-      display: flex;
-      gap: 16px;
-      align-items: center;
-      flex: 1;
-
-      & input {
-        width: 70%;
-        margin-right: 10px;
-        min-width: 0;
-        line-height: 2rem;
-        background-color: var(--color-4);
-        border-radius: 9999px;
-        border: none;
-        padding: 0 10px;
-      }
+    & input {
+      /* flex: 1; */
+      width: 50%;
+      /* margin-right: 10px; */
+      min-width: 200px;
+      line-height: 2rem;
+      background-color: var(--color-4);
+      border-radius: 9999px;
+      border: none;
+      padding: 0 10px;
     }
+
+    & .feather-bell {
+      margin-left: auto;
+    }
+    /* } */
 
     & .profile {
       display: flex;
@@ -106,6 +118,7 @@ body {
 
     & svg {
       color: var(--color-1);
+      flex: none;
     }
   }
 
@@ -120,30 +133,34 @@ body {
       align-items: center;
       color: var(--color-1);
 
-      .avatar {
+      & .avatar {
         height: 70px;
         width: 70px;
       }
+    }
 
-      & .buttons {
-        border: 1px solid red;
-        list-style-type: none;
-        padding: 0;
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        align-items: center;
-        gap: 32px;
+    & .buttons {
+      /* border: 1px solid red; */
+      list-style-type: none;
+      padding: 0;
+      display: grid;
+      grid-template-columns: repeat(3,1fr);
+      align-items: center;
+      gap: 32px;
 
-        button {
-          border: none;
-          background-color: var(--color-2);
-          border-radius: 9999px;
-          /* font-size: 1.2rem; */
-          font-weight: bold;
-          width: 100%;
-          padding: 8px 16px;
-          color: var(--color-5);
-        }
+      & button {
+        border: none;
+        background-color: var(--color-2);
+        border-radius: 9999px;
+        font-size: 0.9rem;
+        font-weight: bold;
+        width: 100%;
+        padding: 8px 16px;
+        color: var(--color-5);
+      }
+
+      & button:hover {
+        background-color: var(--color-3);
       }
     }
   }
@@ -152,7 +169,106 @@ body {
 .main {
   background-color: var(--color-4);
   grid-area: main;
-  padding: 24px 24px 0 16px;
+  padding: 24px 24px 0 24px;
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+  "projects announcements"
+  "projects trending";
+  grid-gap: 36px;
+
+  & .info-section .section-name {
+    font-size: 1.17rem;
+    margin-bottom: 8px;
+  }
+
+  & .projects-section {
+    grid-area: projects;
+
+    & .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+      grid-auto-rows: 1fr;
+      gap: 36px;
+
+      & .card {
+        border-left: 6px solid var(--color-3);
+        border-radius: 7px;
+        padding: 24px;
+        background-color: var(--color-5);
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        box-shadow: 0px 5px 5px 0px #ccc;
+
+        & .name {
+          /* margin-bottom: 4px; */
+          color: var(--color-1);
+        }
+
+        & .description {
+          color: var(--color-6);
+          max-width: 60ch;
+          margin-bottom: auto;
+        }
+
+        & .icons {
+          margin-top: 8px;
+          align-self: flex-end;
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          gap: 16px;
+        }
+      }
+    }
+  }
+
+  & .announcements-section {
+    grid-area: announcements;
+
+    & .announcements {
+      background-color: var(--color-5);
+      display: flex;
+      /* grid-template-rows: repeat(3, 1fr); */
+      flex-direction: column;
+      padding: 24px;
+      border-radius: 7px;
+      box-shadow: 0px 5px 5px 0px #ccc;
+
+      & .announcement-card {
+        padding: 16px 0;
+
+        & .description {
+          color: var(--color-6);
+          font-size: 1rem;
+        }
+      }
+
+      & .announcement-card:not(:last-child) {
+        border-bottom: 1px solid var(--color-6);
+      }
+    }
+  }
+
+  & .trending-section {
+    grid-area: trending;
+
+    & .trending-users {
+      background-color: var(--color-5);
+      border-radius: 7px;
+      padding: 24px;
+      display: grid;
+      grid-gap: 24px;
+      box-shadow: 0px 5px 5px 0px #ccc;
+
+      & .user-card {
+        display: flex;
+        align-items: center;
+        gap: 8px; 
+      }
+    }
+  }
 }
 
 .avatar {
