Use font-family settings for button
Form elements like button do not inherit font settings. We must set the
font-family explicitly along with body or set font-family to inherit.

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,10 @@
     font-style: normal;
 }
 
+body, input, textarea, button {
+  font-family: "Helvetica", "nimbus_sans_lregular", "monospace", "sans-serif", "serif"; 
+}
+
 body {
   display: grid;
   grid-template-columns: 1fr 4fr;
@@ -41,7 +45,6 @@ body {
   grid-template-areas: 
   "sidebar header"
   "sidebar main";
-  font-family: "Helvetica", "nimbus_sans_lregular", "monospace", "sans-serif", "serif"; 
   font-size: 16px;
   line-height: 1.3;
 }
