Change screenshot to use updated fonts

--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,8 @@
     font-style: normal;
 }
 
-body, input, textarea, button {
-  font-family: "Helvetica", "nimbus_sans_lregular", "monospace", "sans-serif", "serif"; 
+input, textarea, button {
+  font-family: inherit;
 }
 
 body {
@@ -45,9 +45,11 @@ body {
   grid-template-areas: 
   "sidebar header"
   "sidebar main";
+  font-family: "Helvetica", "nimbus_sans_lregular", "monospace", "sans-serif", "serif"; 
   font-size: 16px;
   line-height: 1.3;
 }
+
 
 .sidebar {
   background-color: var(--color-2);
